--- a/css/dashboard_style.css
+++ b/css/dashboard_style.css
@@ -76,7 +76,6 @@ code {
   background:#fff;
   border:1px solid #dadada;
   font-size:17px;
-      border-radius: 3px;
 }
 
 @keyframes placeHolderShimmer{
@@ -108,4 +107,143 @@ code {
 
 body.modal-open {
     overflow: hidden;
+}
+
+/* custom made */
+
+
+.progress_container{
+   position: absolute;
+    z-index: 100;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    display: block;
+    background: rgba(0, 0, 0, 0.5);
+    padding: 28% 25px;
+    color: #fff;
+    display: none;
+}
+
+@keyframes blink {
+    0% {
+        color:rgba(255,255,255,1)
+    }
+    50% {
+        color:rgba(255,255,255,0.5)
+    }
+    100% {
+        color:rgba(255,255,255,1)
+    }
+  }
+
+.wt_txt{
+    -moz-transition:all 0.5s ease-in-out;
+    -webkit-transition:all 0.5s ease-in-out;
+    -o-transition:all 0.5s ease-in-out;
+    -ms-transition:all 0.5s ease-in-out;
+    transition:all 0.5s ease-in-out; 
+    -moz-animation:blink normal 1.5s infinite ease-in-out; /* Firefox */
+    -webkit-animation:blink normal 1.5s infinite ease-in-out; /* Webkit */
+    -ms-animation:blink normal 1.5s infinite ease-in-out; /* IE */
+     animation:blink normal 1.5s infinite ease-in-out; /* Opera */
+    }
+
+  @keyframes glow_sl {
+    0% {
+        box-shadow:inset 0 0 10px rgba(26, 146, 248,0.3);
+    }
+    50% {
+        box-shadow:inset 0 0 0px rgba(26, 146, 248,0.2);
+    }
+    100% {
+        box-shadow:inset 0 0 10px rgba(26, 146, 248,0.3);
+    }
+  }
+
+
+  .temp_glow{
+    -moz-transition:all 0.5s ease-in-out;
+    -webkit-transition:all 0.5s ease-in-out;
+    -o-transition:all 0.5s ease-in-out;
+    -ms-transition:all 0.5s ease-in-out;
+    transition:all 0.5s ease-in-out; 
+    -moz-animation:glow_sl normal 1.5s infinite ease-in-out; /* Firefox */
+    -webkit-animation:glow_sl normal 1.5s infinite ease-in-out; /* Webkit */
+    -ms-animation:glow_sl normal 1.5s infinite ease-in-out; /* IE */
+     animation:glow_sl normal 1.5s infinite ease-in-out; /* Opera */
+    }
+
+  .folder_name {white-space: nowrap;overflow: hidden;text-overflow: ellipsis;border-bottom: 1px solid #dadada;padding:0;}
+
+  .pro_pic{
+    height: 30px;
+    border-radius: 30px;
+    width: 30px;
+    margin-right: 2px;
+  }
+
+  .prog_continer{
+        position: absolute;
+    z-index: 100;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    display: block;
+    background: rgba(0, 0, 0, 0.5);
+    padding: 28% 25px;
+    color: #fff;
+    display: none;
+
+  }
+
+  .info_label{
+    position:absolute;bottom:-1px;padding:5px;width:100%;color:#fff;    background: rgba(0, 0, 0, 0.5);
+  }
+
+  .folder_nm_label
+  {
+    display: inline-block;width: 100%;padding: 12px 0;
+  }
+
+  .cust_panel{
+    box-shadow: 0 0 12px rgba(0,0,0,0.15);
+  }
+
+  .active_lin{
+    color: blue;
+    border: 1px solid blue;
+    background: #fff;
+    box-shadow: inset 0 0 10px rgba(238, 237, 237, 0.41);
+  }
+
+  .down_lin{
+    -webkit-appearance: button;cursor: pointer;padding: 1px 6px;text-decoration: none;color:inherit;border:#dadada;
+  }
+  .down_lin:hover{
+    color: blue;
+    background: #fff;
+    text-decoration: none;
+  }
+
+  label{
+    margin-bottom: 0px !important;
+  }
+
+  .check-with-label{
+    display: none;
+  }
+  .label-for-check:hover {
+   cursor: pointer;
+}
+.label-for-check{
+  padding: 10px;
+  text-align: center;
+  display: block;
+  white-space: nowrap;overflow: hidden;text-overflow: ellipsis;
+}
+
+.check-with-label:checked + .label-for-check {
+  background: #4cc4e8;
+  color:#fff;
 }
